# GapS

./: pyproject.toml
crawl/: anthropic.py  aws.py  aws_pricing_data_stability.md  aws_pricing_data_titan.md  azure.py  azure_pricing_data.md  cf_clearance.txt  compare.py  cookies.json  gemini.py  gemini_pricing_data.md  main.py  model.py  openai.py  openai_browser.py  openai_pricing_data.md  perplexity.py  perplexity_pricing_data.md  refine.py  utils.py  vertex.py  vertex_pricing_data.md
crawl/dump/: anthropic_pricing_data.md  aws_pricing_data_stability.md  aws_pricing_data_titan.md  azure_pricing_data_north.md  gemini_pricing_data.md  openai_pricing_data.md  perplexity_pricing_data.md
crawl/legacy/: azure_pricing_data_east.md  vertex_pricing_data.md
